# GraduationDemo

./: .gitignore  CMakeLists.txt  RFIDDemo.pro  caminfo.c  caminfo.h  common.h  iso14443a.h  main.cpp  mysqlmodel.cpp  mysqlmodel.h  recocard.cpp  recocard.h  rfid.c  texttosour.cpp  texttosour.h  video_yuv.h  videostream_yuv.c  widget.cpp  widget.h  widget.ui  worker.cpp  worker.h
